# RNASeqFlow

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  setup.py
rswp/: rswp.py  tmp.py
rswp/config/: config.yaml  samples.txt
rswp/utils/: defaults.py  utils.py
rswp/utils/classes/: Common.py  Fastqc.py  Rsem.py  Salmon.py  Samtools.py  Settings.py  Star.py  Tools.py  __init__.py
rswp/utils/functions/: __init__.py  fastqc.py  rsem.py  salmon.py  samtools.py  star.py
rswp/utils/sticker/: sticker_generate.R
src/rswp/: cli.py  common.py  config.py  tx2gene.py  utils.py
src/rswp/sticker/: sticker_generate.R
src/rswp/tools/: base.py  fastqc.py  rsem.py  salmon.py  samtools.py  star.py
