[project]
name = "RNASeqFlow"
version = "0.0.0.9000"
description = "A library for easy RNA-seq analysis"
authors = [
    { name = "Minghao Jiang", email = "jianmginghao1001@163.com" }
]
dependencies = [
    "numpy>=1.19.2",
    "PyYAML>=5.3.1",
    "colorama>=0.4.4",
    "setuptools>=49.6.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
rswp = "rswp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rswp"]
